2002-05-21  Michael Koch  <konqueror@gmx.de>

	* configure.in: added --enable-debug.
	
2002-05-19  Al Riddoch  <alriddoch@zepler.org>

	Many of the changes described here were submitted by Jesse Jones
	in January. Thanks to Jesse for submitting the changes, and apologies
	for delaying them so long.

	* src/Bridge.h: Make MapBegin and ListBegin easier to read.

	* src/Codecs/Packed.cc, src/Codecs/XML.cc, src/Net/Stream.cc:
	  Work around the problem that in_avail() sometimes returns < 0 on
	  some systems.

	* src/Codecs/Packed.h, src/Codecs/XML.h:
	  Remove extraneous trailing comma from enumerations.

	* src/Message/Encoder.h: Ensure that methods from base class are
	  not hidden.

	* src/Net/Stream.cc: Make get_line functions static.

2002-05-15  Michael Koch  <konqueror@gmx.de>

	* atlas-config.in: dont output /usr/include when called with --cflags

2002-05-02  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/gen_cc.py, src/Objects/Entity/Entity.cc,
	  src/Objects/Operation/Operation.cc: Made Objects::*::Instantiate()
	  methods more efficient by making them use the protected constructor,
	  and at the same time make sure the id is not set to the parent by
	  default on instances, for bandwidth efficiency and correctness.

2001-11-08  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/gen_cc.py, src/Objects/Entity/Account.h,
	  src/Objects/Entity/Entity.cc, src/Objects/Entity/Player.h,
	  src/Objects/Entity/RootEntity.h, src/Objects/Operation/Operation.cc,
	  src/Objects/Operation/RootOperation.h: Implemented AsMap() member,
	  so that apps which use AsMap() no longer break.

2001-11-08  Al Riddoch  <alriddoch@zepler.org>

	* Incremented version to 0.4.4 for release.

2001-10-26  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/Encoder.h: Fix includes so file is stand-alone.

	* src/Codecs/Packed.cc: Fix Packed codec so it gets shutdown properlly.

2001-09-24  Al Riddoch  <alriddoch@zepler.org>
