@@ -7,6 +7,14 @@ EXTRA_DIST = ROADMAP Doxyfile footer.html index.dox Atlas.mak Atlas.dsp atlas.m4
 m4datadir = $(datadir)/aclocal
 m4data_DATA = atlas.m4
 
+install-data-local:
+	mkdir -p $(DESTDIR)$(datadir)/doc/Atlas-C++-$(VERSION)
+	$(INSTALL_DATA) README $(DESTDIR)$(datadir)/doc/Atlas-C++-$(VERSION)
+	$(INSTALL_DATA) COPYING $(DESTDIR)$(datadir)/doc/Atlas-C++-$(VERSION)
+	$(INSTALL_DATA) AUTHORS $(DESTDIR)$(datadir)/doc/Atlas-C++-$(VERSION)
+	$(INSTALL_DATA) THANKS $(DESTDIR)$(datadir)/doc/Atlas-C++-$(VERSION)
+	$(INSTALL_DATA) NEWS $(DESTDIR)$(datadir)/doc/Atlas-C++-$(VERSION)
+
 docs:
 	@echo "running doxygen..."
 	@doxygen Doxyfile
